Added a fail safe to avoid inventory layer interfaces from being prevented to be drawn when layer doesn't exist.