@@ -1,5 +1,5 @@
 displayName = N Terraria Utilities
 author = Nakano15
-version = 0.1.2.1
+version = 0.1.2.3
 hideResources = true
 includeSource = false
